--- a/cabal.project
+++ b/cabal.project
@@ -13,8 +13,8 @@ repository cardano-haskell-packages
 -- See CONTRIBUTING for information about these, including some Nix commands
 -- you need to run if you change them
 index-state:
-  , hackage.haskell.org 2023-05-10T10:34:57Z
-  , cardano-haskell-packages 2023-05-31T18:00:00Z
+  , hackage.haskell.org 2023-06-15T10:34:57Z
+  , cardano-haskell-packages 2023-06-15T18:00:00Z
 
 packages:
     cardano-cli
@@ -106,3 +106,36 @@ package snap-server
 -- IMPORTANT
 -- Do NOT add more source-repository-package stanzas here unless they are strictly
 -- temporary! Please read the section in CONTRIBUTING about updating dependencies.
+
+source-repository-package
+    type: git
+    location: https://github.com/input-output-hk/plutus
+    tag: b1fbf43f5a2677b8ad39e2208ca57395a807f3e7
+    subdir:
+      plutus-core
+      plutus-ledger-api
+      plutus-tx
+      plutus-tx-plugin
+      prettyprinter-configurable
+      stubs/plutus-ghc-stub
+
+source-repository-package
+    type: git
+    location: https://github.com/waalge/cardano-api
+    tag: 4b18142afad94c2f10a3c566f16113d69cbde479
+    subdir:
+      cardano-api 
+
+allow-newer:
+  , cborg 
+  , plutus-core
+  , plutus-ledger-api
+  , plutus-tx
+  , plutus-tx-plugin
+  , prettyprinter-configurable
+  , cardano-crypto-class
+  , cardano-ledger-alonzo
+  , cardano-ledger-babbage
+  , cardano-ledger-binary
+  , cardano-api
+
