--- a/cabal.project
+++ b/cabal.project
@@ -13,8 +13,8 @@ repository cardano-haskell-packages
 -- See CONTRIBUTING for information about these, including some Nix commands
 -- you need to run if you change them
 index-state:
-  , hackage.haskell.org 2023-06-15T10:34:57Z
-  , cardano-haskell-packages 2023-06-15T18:00:00Z
+  , hackage.haskell.org 2023-06-22T10:34:57Z
+  , cardano-haskell-packages 2023-06-22T18:00:00Z
 
 packages:
     cardano-cli
@@ -122,7 +122,7 @@ source-repository-package
 source-repository-package
     type: git
     location: https://github.com/waalge/cardano-api
-    tag: 4b18142afad94c2f10a3c566f16113d69cbde479
+    tag: 5167ab67b9ce31f2ef924432eca8ee02744c2e18
     subdir:
       cardano-api 
 
@@ -134,8 +134,8 @@ allow-newer:
   , plutus-tx-plugin
   , prettyprinter-configurable
   , cardano-crypto-class
-  , cardano-ledger-alonzo
-  , cardano-ledger-babbage
-  , cardano-ledger-binary
+  -- , cardano-ledger-alonzo
+  -- , cardano-ledger-babbage
+  -- , cardano-ledger-binary
   , cardano-api
 
